--- a/templates/contact.html
+++ b/templates/contact.html
@@ -31,7 +31,7 @@
             </div>
             <div class="col-md-4"><i class="fa fa-phone" id="phone"></i>
                 <h1><strong>Phone</strong></h1>
-                <p class="para">0156497894</p>
+                <p class="para">+1 555 123456</p>
             </div>
         </div>
     </div>
