--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="col-lg-6 col-lg-offset-0 col-md-6 col-sm-6 footer-contacts">
                 <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                    <p><span class="new-line-span">21 Revolution Street</span> Helwan,Egypt</p>
+                    <p><span class="new-line-span">14 Sesame Street</span> Helwan, Egypt</p>
                 </div>
                 <div><i class="fa fa-phone footer-contacts-icon"></i>
                     <p class="footer-center-info email text-left"> +1 555 123456</p>
@@ -108,5 +108,4 @@
     <script src="{% static 'assets/js/jquery.min.js' %}"></script>
     <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
-
 </html>
