--- a/templates/assignments_solve.html
+++ b/templates/assignments_solve.html
@@ -10,7 +10,7 @@
     <h3 style="margin-left:10px">{{ assignment.title }}</h3>
     <form class="navbar-form" role="form" action="{% url 'save_assignment' %}" method="post" enctype="multipart/form-data">{% csrf_token %}
         <div class="input-group add-on" style="width: 115%;margin-left: -8px;">
-            <input class="form-control" placeholder="Paste the solution link." name="solution" id="save-box" type="text">
+            <input class="form-control" placeholder="Paste the solution link." name="solution" id="save-box" type="text" required="">
             <div class="input-group-btn">
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-cloud-upload"></i></button>
             </div>
