--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -34,7 +34,7 @@
                               <tr>
                                  <td>{{ assignment.title }}</td>
                                  <td>
-                                    <a href="{{ assignment.file.url }}">Download</a>
+                                    <a href="/my-first-blog{{ assignment.file.url }}">Download</a>
                                  </td>
                                  <td>
                                     <a href="solve/{{ id }}">Solve</a>
